# hallucination-detector

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt  streamlit_app.py
.streamlit/: config.toml
examples/: generated.txt  source.txt
src/hallucination_detector/: __init__.py  cli.py  extractor.py  llm_judge.py  models.py  nli_scorer.py  reporter.py
tests/: test_extractor.py  test_nli_scorer.py  test_reporter.py
