[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hallucination-detector"
version = "0.1.0"
description = "LLM hallucination detection pipeline using NLI + LLM-as-judge dual scoring"
requires-python = ">=3.11"
dependencies = [
    "transformers>=4.40.0",
    "torch>=2.2.0",
    "anthropic>=0.25.0",
    "pydantic>=2.6.0",
    "rich>=13.7.0",
    "typer>=0.12.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.1.0",
    "pytest-cov>=5.0.0",
    "pytest-asyncio>=0.23.0",
]

[project.scripts]
hallucination-detector = "hallucination_detector.cli:app"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src/hallucination_detector --cov-report=term-missing"

[tool.hatch.build.targets.wheel]
packages = ["src/hallucination_detector"]
